# a-coder-cli

./: .gitbook-cache.json  .gitignore  .mcp.json  BUGFIX_MCP_MACOS.md  CLI_AUDIT_CRITIQUE_REPORT.md  CONTRIBUTING.md  DESIGN_ELEVATION_SUMMARY.md  Dockerfile  INTERRUPT_HANDLING_IMPROVEMENTS.md  LICENSE  MANIFEST.in  Makefile  PLAN.md  PLUGIN_SYSTEM_IMPLEMENTATION.md  README.md  TTS_IMPLEMENTATION.md  TTS_SETUP_GUIDE.md  VOICE_MODE_IMPLEMENTATION.md  WEB_UI_REDESIGN.md  __init__.py  a_coder_cli.py  claude-skills.md  config.json  config.json.example  config.py  debug-skills-tool.js  esbuild.config.js  howto.md  index.html  mcp.md  package-lock.json  package.json  pyproject.toml  reproduce_exit.js  requirements.txt  run_interactive_mode.py  run_interactive_mode_complete.py  setup.py  tasks-feature.txt  test-skills-debug.bat  (+2 more)
.claude/: settings.local.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  ci.yml.disabled  community-report.yml  e2e.yml  gemini-automated-issue-triage.yml  gemini-scheduled-issue-triage.yml  gemini-scheduled-pr-triage.yml.disabled  release.yml.disabled
a_coder_cli/: __init__.py  a_coder_cli.py
a_coder_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: AUDIT_REPORT.md  CLI_ARCHITECTURE_PLAN.md  PLUGIN_SYSTEM_COMPLETE.md  README.gemini.md  ROADMAP.md  Uninstall.md  architecture-input.md  checkpointing.md  deployment.md  experience.md  extension.md  hooks.template.md  index.md  npm.md  quota-and-pricing.md  remote-plan.md  sandbox.md  skills-directory-guide.md  telemetry.md  troubleshooting.md
integration-tests/: test-helper.js
scripts/: build.js  build_sandbox.js  check-build-status.js  copy_bundle_assets.js  copy_files.js  local_telemetry.js  sandbox_command.js  telemetry.js  telemetry_utils.js
(+12 files in other folders)
